Compatibility with Java 9+